# autonomous-lab

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
autonomous_lab/: __init__.py  acceptance.py  cli.py  control.py  criteria.py  demo.py  doctor.py  evidence.py  executor.py  gates.py  learning.py  ledger.py  model.py  permission.py  protocols.py  py.typed  record.py  registry.py  samples.py  version.py  workcell.py
docs/: architecture.md  evidence-model.md  pilot.md
schemas/: evidence-event.schema.json
tests/: test_acceptance.py  test_control.py  test_doctor.py  test_intelligence.py  test_lab.py  test_permission.py  test_record.py  test_sample_replay.py  test_samples.py
