[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomous-lab"
version = "0.1.0"
description = "How much of an end-to-end lab run happens without a human, and what is in the way"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "di-omics" }]

# plr-re is the only dependency: this package derives its instrument registry from
# plr_re.protocolmap.SEEDS and calls plr-re's zero-decode readers. It is not on PyPI, so
# it installs from git. Everything else is stdlib, so the ledger computes on a laptop.
dependencies = [
  "plr-re @ git+https://github.com/di-omics/plr-reverse-engineer",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
autonomous-lab = "autonomous_lab.cli:main"

[tool.setuptools.packages.find]
include = ["autonomous_lab*"]

# The lint contract, stated rather than inherited. CI installs ruff unpinned, and ruff's
# default rule set grows between releases, so a repo that selects nothing is agreeing in
# advance to every rule its authors have not read yet. This is the set this code is
# written against: pyflakes plus the pycodestyle errors that catch real mistakes.
[tool.ruff]
line-length = 100
indent-width = 2

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
